--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huijin.festec.example">
+    package="com.donghuang.festec.example">
 
     <application
-        android:name=".ExampleApp"
+        android:name="com.donghuang.festec.example.ExampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExampleActivity">
+        <activity android:name="com.donghuang.festec.example.ExampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
