--- a/latte-core/src/main/AndroidManifest.xml
+++ b/latte-core/src/main/AndroidManifest.xml
@@ -1,2 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huijin.latte" />
+    package="com.donghuang.latte">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true" />
+
+</manifest>
