--- a/latte-ec/src/main/AndroidManifest.xml
+++ b/latte-ec/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.huijin.latte.ec" />
+    package="com.donghuang.latte.ec" />
