--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -37,14 +37,21 @@ dependencies {
     compile 'me.yokeyword:fragmentation:1.3.5'
     compile 'me.yokeyword:fragmentation-swipeback:1.3.5'
     // ButterKnife依赖
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     // 网络请求依赖
     compile 'com.squareup.okio:okio:1.13.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    //Loader依赖
+    // Loader依赖
     compile 'com.wang.avi:library:2.1.3'
-
+    // RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.1.13'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    // Banner依赖
+    compile 'com.bigkoo:ConvenientBanner:2.1.4'
+    // JSON依赖
+    compile 'com.alibaba:fastjson:1.2.31'
 }
