--- a/latte-ec/build.gradle
+++ b/latte-ec/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
@@ -27,4 +28,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':latte-core')
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
