--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     // Banner依赖
-    compile 'com.bigkoo:ConvenientBanner:2.1.4'
+    compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     // JSON依赖
     compile 'com.alibaba:fastjson:1.2.31'
 }
