--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
         jcenter()
     }
     dependencies {
+        //noinspection GradleDependency
         classpath 'com.android.tools.build:gradle:3.0.1'
+        //noinspection GradleDependency
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
     }
 }
