--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     // JSON依赖
     compile 'com.alibaba:fastjson:1.2.31'
+    // Log
+    compile 'com.orhanobut:logger:2.2.0'
 }
