临时提交，忘了上次写到哪了

--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.31'
     // Log
     compile 'com.orhanobut:logger:2.2.0'
+    //微信依赖（包含统计）
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.1.4'
 }
