--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':latte-ec')
+    compileOnly project(':latte-annotations')
     annotationProcessor project(':latte-compiler')
 }
