--- a/latte-core/src/main/AndroidManifest.xml
+++ b/latte-core/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true" />
+        android:supportsRtl="true" >
+        <activity android:name=".wechat.templates.WXEntryTemplate" />
+    </application>
 
 </manifest>
